--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,7 +87,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/bio"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             android:singleLine="false" />
     </android.support.design.widget.TextInputLayout>
 
